--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,6 +15,8 @@
 .btn.top-action-left { left: 20px; }
 .btn.top-action-right { right: 20px; }
 
+img.flag { opacity:0.3;height:36px; }
+
 /* Large desktop */
 /* @media (min-width: 1200px) { ... } */
 
