--- a/public/css/style.css
+++ b/public/css/style.css
@@ -38,4 +38,7 @@ img.flag { opacity:0.3;height:36px; }
 /* Portrait phones */
 @media (max-width: 320px) {
   .btn.top-action { top: 95px; }
+  .hidden-phone-portrait {
+    display: none !important;
+  }
 }
