--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,7 @@
 .progress.big { height: 40px; line-height: 40px; }
 .progress.big .bar { font-size: 16px; }
 
-.row-fluid .span12.main { width: 66%; }
+.row .col-12.main { width: 66%; }
 
 .table th.text-right,
 .table td.text-right { text-align: right; }
@@ -11,7 +11,7 @@
 
 .table tr.child { background-color: #f9f9f9; }
 
-.btn.top-action { position: absolute; top: 60px; }
+.btn.top-action { position: absolute; top: 14px; }
 .btn.top-action-left { left: 20px; }
 .btn.top-action-right { right: 20px; }
 
@@ -27,7 +27,7 @@ img.flag { opacity:0.3;height:36px; }
 
 /* Landscape phone to portrait tablet */
 @media (max-width: 767px) {
-  .row-fluid .span12.main { width: 100%; margin-left: 0px; }
+  .row .col-12.main { width: 100%; margin-left: 0px; }
 }
 
 /* Landscape phones and down */
@@ -37,7 +37,6 @@ img.flag { opacity:0.3;height:36px; }
 
 /* Portrait phones */
 @media (max-width: 320px) {
-  .btn.top-action { top: 95px; }
   .hidden-phone-portrait {
     display: none !important;
   }
