Changed hidden-phone to hidden-sm and hidden-small-portrait to hidden-sm-portrait.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -37,7 +37,7 @@ img.flag { opacity:0.3;height:36px; }
 
 /* Portrait phones */
 @media (max-width: 320px) {
-  .hidden-phone-portrait {
+  .hidden-sm-portrait {
     display: none !important;
   }
 }
